<resources>
    <string name="app_name">SofaNBA</string>
    <string name="title_explore">Explore</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_seasons">Seasons</string>
    <string name="title_settings">Settings</string>
    <string name="all_players">All players</string>
    <string name="all_teams">All teams</string>
    <string name="loading">Loading</string>
    <string name="players">Players</string>
    <string name="teams">Teams</string>
    <string name="about">About</string>
    <string name="clear_my_favorites_list">Clear my favorites list</string>
    <string name="more_info">More info</string>
    <string name="vestibulum_rutrum_quam_vitae_fringilla_tincidunt_suspendisse_nec_tortor_urna">Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna.</string>
    <string name="sofascore_academy">SofaScore Academy</string>
    <string name="class_2022">Class 2022</string>
    <string name="app_name_category">App Name</string>
    <string name="credit">API Credit</string>
    <string name="developer">Developer</string>
    <string name="antea">Antea Ribarić</string>
    <string name="balldontlie">balldontlie</string>
    <string name="clear_favorites_list">Clear favorites list?</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="favorites_list_is_clear">Favorites list is clear.</string>

    <string-array name="explore_options">
        <item>Players</item>
        <item>Teams</item>
    </string-array>
    <string name="title_activity_team">TeamActivity</string>
    <string name="details">Details</string>
    <string name="matches">Matches</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="conference">Conference</string>
    <string name="division">Division</string>
    <string name="at">\@</string>
    <string name="vs">vs</string>
    <string name="statistics">Statistics</string>
    <string name="team">Team</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="forward">Forward</string>
    <string name="guard">Guard</string>
    <string name="center">Center</string>
    <string name="seasons">Seasons</string>
    <string name="other_teams_in_the_division">Other teams in the division</string>
    <string name="minus">-</string>
    <string name="title_activity_match_info">MatchInfoActivity</string>
    <string name="top_players">Top player</string>
    <string name="match_info">Match info</string>

</resources>