<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_assets_exportable_icons_sports_basketball_fill"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_assets_exportable_icons_star_full"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_seasons"
        android:icon="@drawable/ic_assets_exportable_icons_calendar"
        android:title="@string/title_seasons" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>