<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_explore">

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.sofanba.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.sofanba.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_seasons"
        android:name="com.example.sofanba.ui.seasons.SeasonsFragment"
        android:label="@string/title_seasons"
        tools:layout="@layout/fragment_seasons" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.sofanba.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>