<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface0"
    tools:context=".ui.settings.SettingsFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/basic_toolbar_layout" />

    <View
        android:id="@+id/background_about"
        android:layout_width="328dp"
        android:layout_height="132dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/background_curved_16dp_radius"
        android:backgroundTint="?attr/colorSurface2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/text_about"
        style="@style/HeadlineMediumNLv1Left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/about"
        app:layout_constraintStart_toStartOf="@id/background_about"
        app:layout_constraintTop_toTopOf="@id/background_about" />

    <TextView
        style="@style/BodyMediumNLv1Left"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/vestibulum_rutrum_quam_vitae_fringilla_tincidunt_suspendisse_nec_tortor_urna"
        app:layout_constraintStart_toStartOf="@id/background_about"
        app:layout_constraintTop_toBottomOf="@id/text_about" />

    <Button
        android:id="@+id/button_more"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/more_info"
        android:textColor="?attr/colorPrimaryDefault"
        app:layout_constraintBottom_toBottomOf="@id/background_about"
        app:layout_constraintStart_toStartOf="@id/background_about"
        app:rippleColor="?attr/colorElevation1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_clear"
        android:layout_width="328dp"
        android:layout_height="44dp"
        android:layout_marginVertical="8dp"
        android:stateListAnimator="@null"
        android:text="@string/clear_my_favorites_list"
        android:textColor="?attr/colorError"
        android:textSize="14sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="4dp"
        app:layout_constraintStart_toStartOf="@id/background_about"
        app:layout_constraintTop_toBottomOf="@id/background_about"
        app:rippleColor="?attr/colorSurface2"
        app:strokeColor="?attr/colorError"
        app:strokeWidth="1.5dp" />


</androidx.constraintlayout.widget.ConstraintLayout>