<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="328dp"
    android:layout_height="132dp">

    <View
        android:id="@+id/background"
        android:layout_width="328dp"
        android:layout_height="132dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/background_curved_16dp_radius"
        android:backgroundTint="@color/surface_surface_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/HeadlineMediumNLv1Left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/clear_favorites_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel"
        android:textColor="?attr/colorPrimaryDefault"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_clear"
        app:rippleColor="?attr/colorElevation1" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="?attr/colorPrimaryDefault"
        android:text="@string/clear"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="?attr/colorPrimaryHighlight" />

</androidx.constraintlayout.widget.ConstraintLayout>