<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorSurface0">

    <View
        android:id="@+id/view_background"
        android:layout_width="344dp"
        android:layout_height="496dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_curved_16dp_radius"
        android:backgroundTint="?attr/colorSurface1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_player"
        android:layout_width="328dp"
        android:layout_height="328dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@id/view_background"
        app:layout_constraintStart_toStartOf="@id/view_background"
        android:background="@drawable/background_curved_8dp_radius"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_assets_exportable_graphics_player_1_big"
        android:clipToOutline="true"
        android:contentDescription="@string/sofascore_academy"/>
    
    <View
        android:layout_width="328dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@id/image_player"
        app:layout_constraintStart_toStartOf="@id/image_player"
        android:background="@drawable/add_image_foreground" />

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="@id/image_player"
        app:layout_constraintEnd_toEndOf="@id/image_player"
        android:layout_margin="12dp"
        app:tint="?attr/colorSurface1"
        android:src="@drawable/ic_assets_exportable_icons_add_photo"
        android:contentDescription="@string/sofascore_academy"/>

    <View
        android:id="@+id/view_background_team"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/background_curved_16dp_radius"
        android:src="@drawable/ic_action_name"
        app:layout_constraintStart_toStartOf="@id/view_background"
        app:layout_constraintTop_toBottomOf="@id/image_player" />

    <ImageView
        android:id="@+id/image_team"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@id/view_background_team"
        app:layout_constraintEnd_toEndOf="@id/view_background_team"
        app:layout_constraintStart_toStartOf="@id/view_background_team"
        app:layout_constraintTop_toTopOf="@id/view_background_team"
        android:contentDescription="@string/sofascore_academy"/>

    <TextView
        android:id="@+id/text_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DescriptionNLv2Left"
        android:text="@string/team"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/image_player"
        app:layout_constraintStart_toEndOf="@id/view_background_team"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="?attr/colorNLv2" />

    <TextView
        android:id="@+id/text_team_name"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        style="@style/HeadlineMediumNLv1Left"
        app:layout_constraintTop_toBottomOf="@id/text_team"
        app:layout_constraintStart_toEndOf="@id/view_background_team"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="?attr/colorNLv1"/>

    <TextView
        android:id="@+id/text_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AssistiveNLv1Left"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/text_team_name"
        app:layout_constraintStart_toStartOf="@id/text_team_name" />

    <TextView
        android:id="@+id/text_height_value"
        android:layout_width="140dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/view_background_team"
        app:layout_constraintEnd_toStartOf="@id/vertical_line"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        style="@style/BodyLargeNLv1Center"
        android:textColor="?attr/colorNLv1" />

    <TextView
        android:id="@+id/text_hright"
        android:layout_width="140dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/text_height_value"
        app:layout_constraintEnd_toStartOf="@id/vertical_line"
        android:text="@string/height"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        style="@style/DescriptionNLv2Center"
        android:textColor="?attr/colorNLv2"
        android:textAllCaps="true"/>

    <View
        android:id="@+id/vertical_line"
        android:layout_width="1dp"
        android:layout_height="42dp"
        android:background="?attr/colorNLv3"
        app:layout_constraintTop_toBottomOf="@id/view_background_team"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/view_background"
        app:layout_constraintEnd_toEndOf="@id/view_background"
        />

    <TextView
        android:id="@+id/text_weight_value"
        android:layout_width="140dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/view_background_team"
        app:layout_constraintStart_toEndOf="@id/vertical_line"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        style="@style/BodyLargeNLv1Center"
        android:textColor="?attr/colorNLv1" />

    <TextView
        android:id="@+id/text_weight"
        android:layout_width="140dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/text_weight_value"
        app:layout_constraintStart_toStartOf="@id/vertical_line"
        android:text="@string/weight"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        style="@style/DescriptionNLv2Center"
        android:textColor="?attr/colorNLv2"
        android:textAllCaps="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>